--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,14 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  location: ^4.4.0
+
 
 dev_dependencies:
   flutter_test:
