--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+systemProp.org.gradle.internal.http.socketTimeout=60000
+systemProp.org.gradle.internal.http.connectionTimeout=60000
+systemProp.javax.net.ssl.protocols=TLSv1.2
+
