--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,12 +3,21 @@
 <plist version="1.0">
 <dict>
 
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Your location is needed to show you on the map</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Your location is needed to show you on the map</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Your location is needed to show you on the map</string>
+
+
+    <key>GIDClientID</key>
+    <string>YOUR_IOS_CLIENT_ID</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+    	<dict>
+    	<key>CFBundleTypeRole</key>
+    	<string>Editor</string>
+    	<key>CFBundleURLSchemes</key>
+    	<array>
+    		<string>YOUR_IOS_URL_SCHEME</string>
+    	</array>
+    	</dict>
+    </array>
 
 
 	<key>CFBundleDevelopmentRegion</key>
